--- a/projects/ngx-command-palette/src/lib/content/command-palette-content.component.html
+++ b/projects/ngx-command-palette/src/lib/content/command-palette-content.component.html
@@ -1,1 +1,32 @@
-<p>command-palette-content works!</p>
+<ng-container *ngIf="groups && groups.length; else elseTemplate">
+  <div *ngFor="let group of groups; let groupIndex = index" class="ngx-command-palette__content-item-group">
+    <div class="ngx-command-palette__content-item-group-header">
+      <span>{{ group.title }}</span>
+    </div>
+
+    <div class="ngx-command-palette__content-item-group-container">
+      <ng-container *ngFor="let item of group.items; let itemIndex = index">
+        <a (mouseenter)="itemVisited$.next(itemIndex + groupIndex)"
+           (click)="itemClicked$.next(itemIndex + groupIndex)"
+           [class.ngx-command-palette__content-item--selected]="itemIndex + groupIndex === selectedItemIndex"
+           [attr.href]="item.href"
+           class="ngx-command-palette__content-item">
+
+          <div *ngIf="item.iconClass" class="ngx-command-palette__content-item-icon">
+            <i [ngClass]="item.iconClass"></i>
+          </div>
+          <span class="ngx-command-palette__content-item-text">{{item.text}}</span>
+
+        </a>
+      </ng-container>
+    </div>
+
+  </div>
+</ng-container>
+
+<ng-template #elseTemplate>
+  <div class="ngx-command-palette__content-item-no-results">
+    <span>No search results</span>
+  </div>
+</ng-template>
+
