--- a/projects/ngx-command-palette/src/lib/header/command-palette-header.component.html
+++ b/projects/ngx-command-palette/src/lib/header/command-palette-header.component.html
@@ -1,14 +1,31 @@
-<div class="ngx-command-palette__header-container">
-  <i class="ngx-command-palette__header-icon">?</i>
+<span class="ngx-command-palette__header-icon">
+  <svg width="20px" height="20px" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path fill-rule="evenodd" clip-rule="evenodd"
+          d="M4.47487 4.4749C2.32698 6.62279 2.32698 10.1052 4.47487 12.2531C6.62275 14.401 10.1052 14.401 12.253 12.2531C14.4009 10.1052 14.4009 6.62279 12.253 4.4749C10.1052 2.32702 6.62275 2.32702 4.47487 4.4749ZM10.8388 10.8389C9.47199 12.2057 7.25591 12.2057 5.88908 10.8389C4.52224 9.47203 4.52224 7.25595 5.88908 5.88912C7.25591 4.52228 9.47199 4.52228 10.8388 5.88912C12.2057 7.25595 12.2057 9.47203 10.8388 10.8389Z"
+          fill="currentColor"/>
+    <path
+      d="M11.1924 13.3137C10.6066 12.7279 10.6066 11.7782 11.1924 11.1924C11.7782 10.6066 12.7279 10.6066 13.3137 11.1924L16.8492 14.7279C17.435 15.3137 17.435 16.2635 16.8492 16.8492C16.2635 17.435 15.3137 17.435 14.7279 16.8492L11.1924 13.3137Z"
+      fill="currentColor"/>
+  </svg>
+</span>
 
-  <div class="ngx-command-palette__header-input-group">
-    <!--TODO generate in ngFor-->
-    <!--    <div class="ngx-command-palette__header-search-token"></div>-->
-    <div class="ngx-command-palette__header-selected-item">{{ selectedItemValue }}</div>
+<div class="ngx-command-palette__header-input-group">
 
-    <input type="text" class="ngx-command-palette__header-input" placeholder="Search...">
-  </div>
-
-  <button class="ngx-command-palette__header-clear-btn">x</button>
-
+  <input #input
+         [formControl]="inputControl"
+         (keydown.arrowUp)="onKeyUp($event)"
+         (keydown.arrowDown)="onKeyDown($event)"
+         (keydown.enter)="onKeyEnter($event)"
+         type="text"
+         class="ngx-command-palette__header-input"
+         placeholder="Search...">
 </div>
+
+<button *ngIf="clearBtnVisible"
+        (click)="clearInput()"
+        class="ngx-command-palette__header-clear-btn">
+  <svg width="16px" height="16px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+    <path fill="currentColor" fill-rule="evenodd" d="M8,16 C12.4183,16 16,12.4183 16,8 C16,3.58172 12.4183,0 8,0 C3.58172,0 0,3.58172 0,8 C0,12.4183 3.58172,16 8,16 Z M4.29289,4.29289 C4.68342,3.90237 5.31658,3.90237 5.70711,4.29289 L8,6.58579 L10.2929,4.29289 C10.6834,3.90237 11.3166,3.90237 11.7071,4.29289 C12.0976,4.68342 12.0976,5.31658 11.7071,5.70711 L9.41421,8 L11.7071,10.2929 C12.0976,10.6834 12.0976,11.3166 11.7071,11.7071 C11.3166,12.0976 10.6834,12.0976 10.2929,11.7071 L8,9.41421 L5.70711,11.7071 C5.31658,12.0976 4.68342,12.0976 4.29289,11.7071 C3.90237,11.3166 3.90237,10.6834 4.29289,10.2929 L6.58579,8 L4.29289,5.70711 C3.90237,5.31658 3.90237,4.68342 4.29289,4.29289 Z"/>
+  </svg>
+
+</button>
