--- a/projects/ngx-command-palette/src/lib/styles/root.scss
+++ b/projects/ngx-command-palette/src/lib/styles/root.scss
@@ -1,9 +1,36 @@
 :root {
-  --ngx-command-palette-bg-color: rgba(0, 0, 0, .7);
+  --ngx-command-palette-overlay-bg-color: rgba(0, 0, 0, .7);
+  --ngx-command-palette-border-radius: 8px;
+
+  --ngx-command-palette-group-border-color: #d0d7de;
+  --ngx-command-palette-icon-color: #5e6369;
+
+  --ngx-command-palette-body-font-family: sans-serif;
+  --ngx-command-palette-body-font-size: 14px;
+  --ngx-command-palette-body-heigh: 500px;
+  --ngx-command-palette-body-phone-width: 512px;
+  --ngx-command-palette-body-tabled-width: 640px;
+  --ngx-command-palette-body-desktop-width: 720px;
   --ngx-command-palette-body-bg-color: #fff;
-  --ngx-command-palette-body-border-radius: 8px;
   --ngx-command-palette-body-border-color: unset;
-  --ngx-command-palette-padding: 4px;
+
+  --ngx-command-palette-header-padding: 8px 16px;
+
+  --ngx-command-palette-input-group-padding: 4px 12px;
+  --ngx-command-palette-input-padding: 4px 0;
+  --ngx-command-palette-input-font-size: 14px;
+  --ngx-command-palette-input-line-height: 20px;
+
+  --ngx-command-palette-content-padding: 8px;
+  --ngx-command-palette-content-item-group-header-padding: 8px;
+  --ngx-command-palette-content-item-group-header-color: #75797e;
+  --ngx-command-palette-content-item-group-header-font-size: 12px;
+  --ngx-command-palette-content-item-group-header-font-weight: 600;
+  --ngx-command-palette-content-item-padding: 8px;
+  --ngx-command-palette-content-item-hover-bg-color: #f7f7f7;
+  --ngx-command-palette-content-item-text-line-height: 24px;
+  --ngx-command-palette-content-item-text-color: #45474a;
+
 }
 
 [data-color-theme='dark'] {
